--- a/_talks/2021-12-13-gsoc_talk.md
+++ b/_talks/2021-12-13-gsoc_talk.md
@@ -5,8 +5,9 @@ type: "Talk"
 permalink: /talks/2021-12-13-gsoc-talk
 venue: "PASC, PICT, Pune"
 date: 2021-12-13
-location: "PICT, Pune"
+# location: "PICT, Pune"
 ---
 
 Delivered a talk on getting started with open-source in ML and Google Summer of Code.
 
+Deck can be found here: [Google Slides](https://docs.google.com/presentation/d/1qz2TkuxK8EwWk6QAB9Tov1_WFsO4RW1MA-JWl6XRwzw/edit?usp=sharing)
