Added other papers

--- a/_publications/2022-10-15-evonlp.md
+++ b/_publications/2022-10-15-evonlp.md
@@ -1,27 +1,29 @@
 ---
-title: "An Efficient Modern Baseline for FloodNet VQA"
+title: "Temporal Word Meaning Disambiguation using TimeLMs"
 collection: publications
-permalink: /publication/2022-05-31-floodnet-vqa
-excerpt: 'A state-of-the-art baseline for VQA on the FloodNet dataset. Won the Second Best Paper award in NewInML Workshop 2022.'
-date: 2022-05-31
-venue: 'ICML NewInML Workshop'
-paperurl: 'https://arxiv.org/pdf/2205.15025.pdf'
-citation: 'Kane, Aditya and Sahil Khose. “An Efficient Modern Baseline for FloodNet VQA.” (2022).'
+permalink: /publication/2022-10-15-evonlp
+excerpt: 'We study two methods for word sense disamiguation using temporal components.'
+date: 2022-10-15
+venue: 'EMNLP 2022 EvoNLP workshop'
+paperurl: 'https://arxiv.org/abs/2210.08207'
+citation: 'Godbole, M., Dandavate, P. and Kane, A., 2022. Temporal Word Meaning Disambiguation using TimeLMs. arXiv preprint arXiv:2210.08207.'
 ---
-Designing efficient and reliable VQA systems remains a challenging problem, more so in the case of disaster management and response systems. In this work, we revisit fundamental combination methods like concatenation, addition and element-wise multiplication with modern image and text feature abstraction models. We design a simple and efficient system which outperforms pre-existing methods on the FloodNet dataset and achieves state-of-the-art performance. This simplified system requires significantly less training and inference time than modern VQA architectures. We also study the performance of various backbones and report their consolidated results. Code is available at [this https URL](https://github.com/sahilkhose/floodnet_vqa).
 
-[Download paper here](https://arxiv.org/pdf/2205.15025.pdf)
+Meaning of words constantly changes given the events in modern civilization. Large Language Models use word embeddings, which are often static and thus cannot cope with this semantic change. Thus,it is important to resolve ambiguity in word meanings. This paper is an effort in this direction, where we explore methods for word sense disambiguation for the EvoNLP shared task. We conduct rigorous ablations for two solutions to this problem. We see that an approach using time-aware language models helps this task. Furthermore, we explore possible future directions to this problem.
+
+[Download paper here](https://arxiv.org/pdf/2210.08207.pdf)
 
 If you find our paper useful in your research, please consider citing:
+
 ```
-@misc{https://doi.org/10.48550/arxiv.2205.15025,
-  doi = {10.48550/ARXIV.2205.15025},
-  url = {https://arxiv.org/abs/2205.15025},
-  author = {Kane, Aditya and Khose, Sahil},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
-  title = {An Efficient Modern Baseline for FloodNet VQA},
+@misc{https://doi.org/10.48550/arxiv.2210.08207,
+  doi = {10.48550/ARXIV.2210.08207},
+  url = {https://arxiv.org/abs/2210.08207},
+  author = {Godbole, Mihir and Dandavate, Parth and Kane, Aditya},
+  keywords = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Temporal Word Meaning Disambiguation using TimeLMs},
   publisher = {arXiv},
-  year = {2022},
+  year = {2022},  
   copyright = {arXiv.org perpetual, non-exclusive license}
 }
 
