--- a/_publications/2023-02-15-icassp.md
+++ b/_publications/2023-02-15-icassp.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2023-02-15-icassp
 excerpt: 'A state-of-the-art baseline for few shot out-of-distribution detection in NLP.'
 date: 2023-02-15
-venue: 'ICASSP'
+venue: 'ICASSP 2023'
 paperurl: 'https://ieeexplore.ieee.org/abstract/document/10096482'
 ---
 
